Mon, 10 Nov 1997  Jim Kingdon

	* diff.c (run_diff): Open outfile in binary mode if --binary.

Thu Nov  6 12:42:12 1997  Karl Fogel  <kfogel@floss.red-bean.com>
	                  and Paul Eggert <eggert@twinsun.com>

	* analyze.c: applied Paul Eggert's patch to fix the diff3 merge
	bug described in ccvs/doc/DIFFUTILS-2.7-BUG:
	(shift_boundaries): new var `inhibit_hunk_merge'; use it to
	control something important that I don't quite understand, but
	Paul apparently does, so that's okay.

Sat Nov  1 14:17:57 1997  Michael L.H. Brouwer  <michael@thi.nl>

	* Makefile.in: Add call to ranlib to build a table of contents for
	the library since some systems seem to require this.

1997-10-28  Jim Kingdon

	* .cvsignore: Add files du jour for Visual C++, vc50.pdb and vc50.idb.

	* system.h: Define HAVE_TIME_H.
	* dir.c [_WIN32]: Define CLOSEDIR_VOID.

1997-10-18  Jim Kingdon

	* build_diff.com: Add diff3.c

Fri Sep 26 14:24:42 1997  Tim Pierce  <twp@twp.tezcat.com>

	* diff.c (diff_run): Save old value of optind before calling
	getopt_long, then restore before returning.  Eventually it would
	be nice if diff_run were fully reentrant.

	New diff3 library for CVS.
	* Makefile.in (SOURCES): Add diff3.c.
	(OBJECTS): Add diff3.o.
	* diff3.c: New file, copied from diffutils-2.7.  See diffutils for
	earlier ChangeLogs.  Undefine initialize_main macro. Remove <signal.h>.
	(diff3_run): Renamed from main().  Add `outfile' argument.  Remove
	SIGCLD handling; we do not fork.  Save optind and reset to 0
	before calling getopt_long; restore after option processing done.
	(read_diff): Use diff_run with a temporary output file,
	instead of forking a diff subprocess and reading from a pipe.
	Change DIFF_PROGRAM to "diff"; this argument is now used only for
	diagnostic reporting.
	(xmalloc, xrealloc): Removed.
	(diff_program): Removed.
	(diff_program_name): Made extern, so it may be used in other
	library calls like `error'.
	(initialize_main): New function.
